
sample_models = \
scfg \
s2t \
t2s

sample_trains = \
kftt.30k

EXTRA_DIST = \
$(sample_models) \
$(sample_trains) \
cicada.config.hiero \
cicada.config.hiero-mbr \
cicada.config.string-to-tree \
cicada.config.tree-to-string \
dates_en.txt \
dates_zh_CN.txt \
numbers.en.txt \
numbers.ja.txt \
numbers.zh.txt \
rule.zone-wall \
weights.mbr
