
dist_bin_SCRIPTS = \
	cicada-alignment.py \
	cicada-config.py \
	cicada-extract.py \
	cicada-filter-fallback-rule.py \
	cicada-filter-non-terminal.py \
	cicada-filter-penntreebank.py \
	cicada-index.py \
	cicada-learn.sh \
	cicada-learn-moses.sh \
	cicada-learn-linear.sh \
	cicada-maxent.sh \
	cicada-mert.sh \
	cicada-moses.sh \
	cicada-qsub.sh
