
dist_bin_SCRIPTS = \
	cicada-alignment.py \
	cicada-config.py \
	cicada-extract.py \
	cicada-filter-fallback-rule.py \
	cicada-filter-non-terminal.py \
	cicada-filter-penntreebank.py \
	cicada-index.py \
	cicada-learn.sh \
	cicada-learn.py \
	cicada-learn-moses.sh \
	cicada-maxent.sh \
	cicada-maxent.py \
	cicada-mert.sh \
	cicada-mert.py \
	cicada-mert-moses.sh \
	cicada-moses.sh \
	cicada-qsub.sh \
	cicada-sh.py
