
dist_bin_SCRIPTS = \
	cicada-alignment.py \
	cicada-config.py \
	cicada-extract.py \
	cicada-filter-fallback-rule.py \
	cicada-filter-non-terminal.py \
	cicada-filter-penntreebank.py \
	cicada-index.py \
	cicada-learn.py \
	cicada-learn-moses.py \
	cicada-learn-online.py \
	cicada-maxent.py \
	cicada-mert.py \
	cicada-mert-moses.py \
	cicada-pipe.py \
	cicada-sh.py

noinst_SCRIPTS = \
	cicada-learn-moses.sh \
	cicada-learn.sh \
	cicada-maxent.sh \
	cicada-mert-moses.sh \
	cicada-mert.sh \
	cicada-moses.sh \
	cicada-qsub.sh
