
EXTRA_DIST = \
isoamso.ent \
isoamsr.ent \
isobox.ent \
isocyr1.ent \
isocyr2.ent \
isodia.ent \
isogrk1.ent \
isogrk2.ent \
isogrk3.ent \
isogrk4.ent \
isolat1.ent \
isolat2.ent \
isomfrk.ent \
isomopf.ent \
isomscr.ent \
isonum.ent \
isopub.ent \
isotech.ent \
mmlalias.ent \
mmlextra.ent \
w3centities-f.ent \
w3centities.ent \
wipo.ent \
uspatent.txt
