btree_includedir = $(pkgincludedir)/stx
btree_include_HEADERS = \
        btree.h \
        btree_set.h \
        btree_map.h \
        btree_multiset.h \
        btree_multimap.h \
        btree \
        btree_set \
        btree_map \
        btree_multiset \
        btree_multimap \
        btree.dox
